[package]
name = "notan_egui"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides EGUI support for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_core.workspace = true
notan_app.workspace = true
notan_macro.workspace = true

log.workspace = true
bytemuck.workspace = true

egui = { version = "0.22.0", features = ["bytemuck"] }

[features]
links = []
drop_files = []
glsl-to-spirv = ["notan_macro/glsl-to-spirv"]
shaderc = ["notan_macro/shaderc"]
