[package]
name = "notan_egui"
version = "0.12.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides EGUI support for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_core.workspace = true
notan_app.workspace = true
notan_macro.workspace = true

log.workspace = true
bytemuck.workspace = true

egui = { version = "0.27.2", features = ["bytemuck"] }

[features]
links = []
drop_files = []
glsl-to-spirv = ["notan_macro/glsl-to-spirv"]
shaderc = ["notan_macro/shaderc"]
