[package]
name = "notan_extra"
version = "0.7.1"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides extra features or plugins for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app = { path = "../notan_app", version = "0.7.1" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
spin_sleep = "1.1.1"

