[package]
name = "notan_extra"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides extra features or plugins for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
spin_sleep = "1.1.1"

