[package]
name = "notan_gfx"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_core.workspace = true
notan_app2.workspace = true
notan_macro2.workspace = true

raw-window-handle.workspace = true
hashbrown.workspace = true
log.workspace = true
arrayvec.workspace = true
bitflags.workspace = true

wgpu = { version = "0.19.1", optional = true }
pollster = "0.3.0"
bytemuck = "1.14.1"
image = { version = "0.24.8", features = ["png", "jpeg"] }