[package]
name = "notan_glow"
version = "0.9.2"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides support for OpenGL, OpenGL ES and WebGL for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
bytemuck = "1.13.0"
glow = "0.12.1"
notan_graphics = { path= "../notan_graphics", version = "0.9.2" }
hashbrown = "0.13.2"
image = { version = "0.24.5", default-features = false, features = ["jpeg", "png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["Window", "WebGlContextAttributes","HtmlCanvasElement","HtmlImageElement"] }
