[package]
name = "notan_glow"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides support for OpenGL, OpenGL ES and WebGL for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_graphics.workspace = true

log.workspace = true
bytemuck.workspace = true
hashbrown.workspace = true
image.workspace = true

glow = "0.12.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window", "WebGlContextAttributes","HtmlCanvasElement","HtmlImageElement"] }
