[package]
name = "notan_glow"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides support for OpenGL, OpenGL ES and WebGL for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_graphics.workspace = true

log.workspace = true
bytemuck.workspace = true
hashbrown.workspace = true
image.workspace = true

glow = "0.12.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window", "WebGlContextAttributes","HtmlCanvasElement","HtmlImageElement"] }
