[package]
name = "notan_glyph"
version = "0.7.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides glyph's support for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
glyph_brush = "0.7.5"
bytemuck = "1.12.1"
notan_app = { path = "../notan_app", version = "0.7.1" }
notan_graphics = { path = "../notan_graphics", version = "0.7.1" }
notan_math = { path = "../notan_math", version = "0.7.1" }
