[package]
name = "notan_glyph"
version = "0.10.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides glyph's support for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app.workspace = true
notan_graphics.workspace = true
notan_math.workspace = true
notan_macro.workspace = true

log.workspace = true
bytemuck.workspace = true

glyph_brush = "0.7.7"

[features]
glsl-to-spirv = ["notan_macro/glsl-to-spirv"]
shaderc = ["notan_macro/shaderc"]
