[package]
name = "notan_glyph"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides glyph's support for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app.workspace = true
notan_graphics.workspace = true
notan_math.workspace = true
notan_macro.workspace = true

log.workspace = true
bytemuck.workspace = true

glyph_brush = "0.7.11"

[features]
glsl-to-spirv = ["notan_macro/glsl-to-spirv"]
shaderc = ["notan_macro/shaderc"]
