[package]
name = "notan_graphics"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides simple graphics API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
parking_lot = "0.12.1"
image = { version = "0.24.6", default-features = false, features = ["jpeg", "png"] }
notan_math = { path = "../notan_math", version = "0.10.0" }
notan_macro = { path = "../notan_macro", version = "0.10.0" }
notan_utils = { path = "../notan_utils", version = "0.10.0" }
glsl-layout2 = { version = "0.5.0", features = ["glam"] }

[features]
texture_to_file = ["notan_utils/save_file"]
