[package]
name = "notan_graphics"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides simple graphics API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_math.workspace = true
notan_macro.workspace = true
notan_utils.workspace = true

bytemuck.workspace = true
parking_lot.workspace = true
image = { workspace = true, optional = true }

crevice_notan = { version = "0.13.0", features = ["glam"] }

[features]
texture_to_file = ["notan_utils/save_file", "image/png"]
