[package]
name = "notan_graphics"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides simple graphics API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_math.workspace = true
notan_macro.workspace = true
notan_utils.workspace = true

log.workspace = true
bytemuck.workspace = true
parking_lot.workspace = true
image = { workspace = true, optional = true }

crevice_notan = { version = "0.13.0", features = ["glam"] }
serde = { workspace = true, optional = true }

[features]
texture_to_file = ["notan_utils/save_file", "image/png"]
