[package]
name = "notan_input"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides a set of API to manage user's input"

[dependencies]
notan_core.workspace = true
notan_math.workspace = true

hashbrown.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "notan_core/serde", "notan_math/serde", "hashbrown/serde"]
