[package]
name = "notan_input"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides a set of API to manage user's input"

[dependencies]
notan_core.workspace = true
notan_math.workspace = true

hashbrown.workspace = true
log.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "notan_core/serde", "notan_math/serde", "hashbrown/serde"]
