[package]
name = "notan_log"
version = "0.3.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides a multipatform log support for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
notan_app = { path = "../notan_app", version = "0.3.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = "0.2"
wasm-bindgen = "0.2.80"
chrono = { version = "0.4", features = ["wasmbind"] }
