[package]
name = "notan_log"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides a multipatform log support for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app.workspace = true

log.workspace = true

fern = { version = "0.6.2", features = ["colored"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
time = { version = "0.3.37", features = ["formatting", "local-offset"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true

console_log = "1.0.0"
