[package]
name = "notan_macro"
version = "0.10.0"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides a set of utils as macros for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.15", features = ["full", "extra-traits"] }
quote = "1.0.26"
num = "0.4.0"
glsl-to-spirv = { version = "0.1.7", optional = true }
shaderc = { version = "0.8.2", optional = true }
proc-macro2 = "1.0.56"
naga = { version = "0.10.0", features = ["glsl-in", "glsl-out"], optional = true }
spirv_cross = { version = "0.23.1", features = ["glsl"], optional = true }

[build-dependencies]
cfg_aliases = "0.1.1"

[features]
glsl-to-spirv = ["dep:glsl-to-spirv", "dep:spirv_cross"]
shaderc = ["dep:shaderc", "dep:spirv_cross"]
naga = ["dep:naga"]

[lib]
proc-macro = true

