[package]
name = "notan_macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides a set of utils as macros for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
quote = "1.0.33"
num = "0.4.1"
glsl-to-spirv = { version = "0.1.7", optional = true }
shaderc = { version = "0.8.2", optional = true }
proc-macro2 = "1.0.69"
spirv_cross = { version = "0.23.1", features = ["glsl"] }

[build-dependencies]
cfg_aliases = "0.1.1"

[features]
glsl-to-spirv = ["dep:glsl-to-spirv"]
shaderc = ["dep:shaderc"]

[lib]
proc-macro = true

