[package]
name = "notan_math"
version = "0.9.5"
authors = ["Nazarí González <nazari.nz@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides simple set of math's utils for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.22.0", features = ["scalar-math", "bytemuck"] }
serde = { version = "1", optional = true, features = ["serde_derive"] }

[features]
serde = ["dep:serde", "glam/serde"]
