[package]
name = "notan_math"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides simple set of math's utils for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.24.0", features = ["bytemuck"] }
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde", "glam/serde"]
