[package]
name = "notan_oddio"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides support for Audio features using Oddio"

[dependencies]
notan_audio.workspace = true

log.workspace = true
hashbrown.workspace = true

cpal = { version = "0.15.2", features = ["wasm-bindgen"] }
oddio = "0.7.1"
symphonia = { version = "0.5.3", features = ["mp3"] }
