[package]
name = "notan_text"
version = "0.7.1"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides a simple Text API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app = { path = "../notan_app", version = "0.7.1" }
notan_graphics = { path = "../notan_graphics", version = "0.7.1" }
notan_glyph = { path = "../notan_glyph", version = "0.7.1" }
notan_math = { path = "../notan_math", version = "0.7.1" }
log = "0.4.17"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
hashbrown = "0.12.3"