[package]
name = "notan_text"
version = "0.10.0"
edition = "2021"
readme = "README.md"
homepage = "https://github.com/Nazariglez/notan"
repository = "https://github.com/Nazariglez/notan"
license = "MIT OR Apache-2.0"
description = "Provides a simple Text API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app.workspace = true
notan_graphics.workspace = true
notan_glyph.workspace = true
notan_math.workspace = true

log.workspace = true
parking_lot.workspace = true
hashbrown.workspace = true

lazy_static = "1.4.0"

[features]
glsl-to-spirv = ["notan_glyph/glsl-to-spirv"]
shaderc = ["notan_glyph/shaderc"]
