[package]
name = "notan_text"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
description = "Provides a simple Text API for Notan"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notan_app.workspace = true
notan_graphics.workspace = true
notan_glyph.workspace = true
notan_math.workspace = true

log.workspace = true
parking_lot.workspace = true
hashbrown.workspace = true

lazy_static = "1.4.0"

[features]
glsl-to-spirv = ["notan_glyph/glsl-to-spirv"]
shaderc = ["notan_glyph/shaderc"]
